order Filter implemetation

--- a/customer.html
+++ b/customer.html
@@ -90,7 +90,7 @@
             <div class="len2"></div>
             <div class="iconDE">
               <div class="border">
-                <div class="iconE"></div>
+                <div class="iconE" id="edit2"></div>
               </div>
               <div class="border1">
                 <div class="iconD" id="delete1"></div>
