--- a/order.html
+++ b/order.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -19,19 +18,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <div class="container1">
@@ -72,22 +58,15 @@
           <i class="fa-solid fa-caret-down iconDr"></i>
         </button> -->
         <div class="dropdown">
-          <button
-            class="btn btn-secondary dropdown-toggle"
-            type="button"
-            id="dropdownMenuButton1"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Dropdown button
+          <button class="dropbtn">
+            Dropdown
+            <i class="fa-duotone fa-solid fa-caret-down"></i>
           </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#" id="datefil">Date</a></li>
-            <li><a class="dropdown-item" href="#" id="priceFil">Price</a></li>
-            <li>
-              <a class="dropdown-item" href="#" id="progreFil">progress</a>
-            </li>
-          </ul>
+          <div class="dropdown-content">
+            <a href="#" id="datefil">Date</a>
+            <a href="#" id="priceFil">price</a>
+            <a href="#" id="progreFil">progress</a>
+          </div>
         </div>
       </div>
       <div class="orderRecipt" id="orderRecip">
@@ -103,18 +82,22 @@
           <p class="totalPrice">Total Price : 2,000.00</p>
         </div>
       </div>
-
-      <table class="table" id="tblFilter">
-        <thead>
-          <tr>
-            <th scope="col">OrderId</th>
-            <th scope="col">Date</th>
-            <th scope="col">SalesPerson</th>
-            <th scope="col" id="price">Status</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+      <div class="dataTable" id="tblFilter">
+        <table>
+          <thead>
+            <tr>
+              <th colspan="4" id="title">Customer Report</th>
+            </tr>
+            <tr>
+              <th>OrderId</th>
+              <th>Date</th>
+              <th>SalesPerson</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody id="bodytable"></tbody>
+        </table>
+      </div>
 
       <div class="salesperson">
         <div class="details1">
