Add Sidebar toglle function

--- a/index.html
+++ b/index.html
@@ -21,10 +21,28 @@
         <!-- Home division -->
         <div class="Home">
           <div class="icon"></div>
-          <div class="hide"></div>
+          <div class="hide" id="hidemenu"></div>
           <div class="name" onclick="myFunc()">
             <span>Home</span>
           </div>
+        </div>
+        <div class="sidenav" id="sidenav">
+          <button class="dropdown-btn">
+            menu
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-container">
+            <a href="/index.html">Home</a>
+            <a href="/order.html">Order</a>
+            <a href="/customer.html">Customer</a>
+            <a href="/report.html">Report</a>
+            <a href="/item.html">item</a>
+          </div>
+        </div>
+        <div class="dropdown-container">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
         </div>
         <!-- Home division -->
 
