OrderPage responsive and add toggle menu button

--- a/order.html
+++ b/order.html
@@ -50,15 +50,31 @@
       </div>
       <!-- sidebar section end -->
       <div class="headTitle">
+        <div class="hide">
+          <i class="fa-solid fa-bars fa-xl dropbtn" onclick="myFunction()"></i>
+          <div class="menu">
+            <div class="dropdown">
+              <button></button>
+              <div id="myDropdown" class="dropdown-content">
+                <a href="/index.html">Home</a>
+                <a href="/order.html">Order</a>
+                <a href="/customer.html">Customer</a>
+                <a href="/report.html">Report</a>
+                <a href="/item.html">Item</a>
+              </div>
+            </div>
+          </div>
+        </div>
         <h1>MOS BUGGER</h1>
       </div>
+
       <div class="filtter">
         <!-- <button type="button" class="fbtn">
           Fillter items
           <i class="fa-solid fa-caret-down iconDr"></i>
         </button> -->
         <div class="dropdown">
-          <button class="dropbtn">
+          <button class="dropbtn1">
             Fillter
             <i class="fa-duotone fa-solid fa-caret-down"></i>
           </button>
