Tracking And Item Features Added

--- a/customer.html
+++ b/customer.html
@@ -53,6 +53,19 @@
       </div>
       <!-- side bar section end -->
       <div class="headTitle1">
+        <div class="hide12">
+          <i class="fa-solid fa-bars fa-xl dropbtn" onclick="myFunction()"></i>
+          <div class="menu">
+            <div class="dropdown">
+              <div id="myDropdown" class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <h1>MOS BUGGER</h1>
       </div>
       <div class="filter1">
