--- a/order.html
+++ b/order.html
@@ -56,11 +56,11 @@
             <div class="dropdown">
               <button></button>
               <div id="myDropdown" class="dropdown-content">
-                <a href="/index.html">Home</a>
-                <a href="/order.html">Order</a>
-                <a href="/customer.html">Customer</a>
-                <a href="/report.html">Report</a>
-                <a href="/item.html">Item</a>
+                <a target="_blank" onclick="myFunc()">Home</a>
+                <a target="_blank" onclick="myFunc1()">Order</a>
+                <a target="_blank" onclick="myFunc2()">Customer</a>
+                <a target="_blank" onclick="myFunc3()">Report</a>
+                <a target="_blank" onclick="myFunc4()">Item</a>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
           <div class="proPic"></div>
           <h4>Mr. Mark</h4>
           <p>+94719238305</p>
-          <button class="Tbtn">Track</button>
+          <button class="Tbtn" id="Tbtn">Track</button>
         </div>
       </div>
     </div>
