--- a/report.html
+++ b/report.html
@@ -48,8 +48,8 @@
       <!-- report type section start -->
       <div class="reportType">
         <div class="reportTypesub">
-          <button class="month">Monthly Report</button>
-          <button class="year">Annual Report</button>
+          <button class="month" id="monthly">Monthly Report</button>
+          <button class="year" id="year">Annual Report</button>
         </div>
       </div>
       <!-- report type section end-->
