--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-container">
-            <a href="/index.html">Home</a>
-            <a href="/order.html">Order</a>
-            <a href="/customer.html">Customer</a>
-            <a href="/report.html">Report</a>
-            <a href="/item.html">item</a>
+            <a href="index.html">Home</a>
+            <a href="order.html">Order</a>
+            <a href="customer.html">Customer</a>
+            <a href="report.html">Report</a>
+            <a href="item.html">item</a>
           </div>
         </div>
         <div class="dropdown-container">
